--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,17 @@
       <version>${vertx.testtools.version}</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+   	  <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.5</version>
+    </dependency>
+    <dependency>
+   	  <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.5</version>
+    </dependency>
 
     <!-- Add any other dependencies that you want packaged into your module (in the lib dir) here
     as 'compile' dependencies. Here is an example
